[package]
name = "proc_vector2d"
description = "Procedural macros used internally by vector2d"
version = "1.0.1"
authors = ["AnthonyYoManz <anthony@anthony-arian.com>"]
edition = "2018"

repository = "https://gitlab.com/DixieDev/vec2d-rs"
license = "Unlicense"

[badges]
gitlab = { repository = "https://gitlab.com/DixieDev/vec2d-rs" }

[lib]
proc-macro = true

[dependencies]
